--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
         <title>Hello World</title>
     </head>
     <body>
+    HEEEEEELLLOOOOOOOOOOO
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
