--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,5 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -26,9 +9,14 @@
         <title>SGS Studentbostäder - Hemma</title>
     </head>
     <body>
-    	<div id="logo"><img src="img/logo.png" /></div>
-
-
+    <div class="container">  
+        <div class="eight columns">
+        	<img class="scale-with-grid" src="img/door_button.png" />
+        </div>
+        <div class="eight columns">
+        	<img class="scale-with-grid" src="img/cal_button.png" />
+        </div>
+    </div>
 
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
