--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,8 @@
         <title>SGS Studentbostäder - Hemma</title>
     </head>
     <body>
-    <div class="container">  
+    <div class="container"> 
+    	<div style="height: 600px" class="sixteen columns"></div> 
         <div class="eight columns">
         	<img class="scale-with-grid" src="img/door_button.png" />
         </div>
