--- a/www/index.html
+++ b/www/index.html
@@ -10,12 +10,17 @@
     </head>
     <body>
     <div class="container"> 
-    	<div style="height: 600px" class="sixteen columns"></div> 
-        <div class="eight columns">
+    	<div style="height: 500px" class="sixteen columns"></div> 
+        <div class="eight columns center">
         	<img class="scale-with-grid" src="img/door_button.png" />
+            <p><strong>Öppna entrédörr</strong></p>
+            <p><small>(Open entrance door)</small></p>
+            
         </div>
-        <div class="eight columns">
+        <div class="eight columns center">
         	<img class="scale-with-grid" src="img/cal_button.png" />
+            <p><strong>Boka facilitet</strong></p>
+            <p><small>(Book facility)</small></p>
         </div>
     </div>
 
