--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     <div class="container"> 
-    	<div style="height: 100px" class="sixteen columns"></div> 
+    	<div style="top-margin: 100px" class="sixteen columns"></div> 
         <div class="eight columns center">
         	<img class="scale-with-grid" src="img/door_button.png" />
             <p><strong>Öppna entrédörr</strong></p>
