--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
     	
     	<div class="eight columns center">
         <form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" target="hej"><ul>
-        	<li><button type="submit" name="epName" value=Första Långgatan 12>
+        	<li><button type="submit" name="epName" value="Första Långgatan 12">
         		<img class="scale-with-grid" src="img/door_button.png" />
         		        		
         	</button></li>
