--- a/www/index.html
+++ b/www/index.html
@@ -5,14 +5,9 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-            <!--<script src="http://hemma.sgsstudentbostader.se/Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>-->
             <script src="jquery-1.4.2.min.js" type="text/javascript"></script>
-            <script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/jquery.cookie.js"></script>
 			<script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/jquery.query-2.1.7.js"></script>
-			<script src="http://hemma.sgsstudentbostader.se/Content/jscalendar-1.0/calendar.js" type="text/javascript"></script>
-			<script src="http://hemma.sgsstudentbostader.se/Content/jscalendar-1.0/lang/calendar-sv.js" type="text/javascript"></script>
-			<script src="http://hemma.sgsstudentbostader.se/Content/jscalendar-1.0/cwp-calendar-setup.js" type="text/javascript"></script>
-			<script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/cwp.js"></script>
+			
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <!--<link href="doorcontrol/doorcontrol.css" rel="stylesheet" type="text/css"/>-->
         <title>SGS Studentbostäder - Hemma</title>
@@ -44,7 +39,7 @@
         </div>
     </div>
 </div>
-	<script type="text/javascript" src="element.js"></script>
+		<script type="text/javascript" src="js/element.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
@@ -61,14 +56,14 @@
         doorcontrol.errorText = "Ett fel uppstod! D&#246;rr ej uppl&#229;st.";
         doorcontrol.unlockDurationSeconds = 5;
         
-        jQuery("#doorcontrolcontent button").click(doorcontrol.openEntryPath);
+        //jQuery("#doorcontrolcontent button").click(doorcontrol.openEntryPath);
     });
 //-->
 
 </script>
 <!-- Här slutar scriptet -->
-<script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="radera.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/radera.js"></script>
 <iframe id="hej" height="100px"></iframe>
     </body>
 </html>
