--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
         <title>SGS Studentbostäder - Hemma</title>
 </head>
 <body>
+Version 1.1
 <div id="index">
 <div class="container">
 	<div class="sixteen columns"></div>
