--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,9 @@
         <title>SGS Studentbostäder - Hemma</title>
 </head>
 <body>
-Version 1.2
+<div class="logo">
+<img class="scale-with-grid" src="img/sgs_logo_width_512.png">
+</div>
 <div id="index">
 <div class="container">
 	<div class="sixteen columns"></div>
