knapp har fått box runt sig

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     	<div class="eight columns center">
         <form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" target="hej">
         	<ul>
-        	<li><button type="submit" name="epName" value="Första Långgatan 12">
+        	<li><button type="submit" name="epName" value="Första Långgatan 12" class="doorbutton">
         		<img class="scale-with-grid" src="img/door_button.png" />	        		
         	</button></li>
         	</ul>    	
