--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="logo">
-<img class="scale-with-grid" src="img/sgs_logo_width_512.png">
+<img class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
 <div id="index">
 <div class="container">
@@ -64,6 +64,6 @@
 <!-- Här slutar scriptet -->
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/radera.js"></script>
-<iframe id="hej" height="100px"></iframe>
+<!--<iframe id="hej" height="100px"></iframe>-->
     </body>
 </html>
