--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,17 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+function redo(){
+if(document.readyState === "complete"){
+tvattstuga();
+console.log("Nu kollar readystate om index har laddat");
+}	
+
+}
+
+
+</script>
 		<script type="text/javascript" src="js/element.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
@@ -65,5 +76,7 @@
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/radera.js"></script>
 <!--<iframe id="hej" height="100px"></iframe>-->
+
+<a href="test.html" font-size="40px">Hej tryck på mig</a>
     </body>
 </html>
