testar att ladda tvättstuga ordentligt

--- a/www/test.html
+++ b/www/test.html
@@ -9,7 +9,7 @@
 <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $("#div1").load("http://tvatta.sgsstudentbostader.se");
+    $("#div1").load("http://www.sgsstudentbostader.se/ext_gw.aspx?module=wwwash&lang=se#lblPanelName");
   });
 });
 </script>
