testar att ladda även hemma.sgsstudentbostader.se

--- a/www/test.html
+++ b/www/test.html
@@ -12,6 +12,11 @@ $(document).ready(function(){
     $("#div1").load("http://www.sgsstudentbostader.se/ext_gw.aspx?module=wwwash&lang=se#lblPanelName");
   });
 });
+$(document).ready(function(){
+  $("button").click(function(){
+    $("#div2").load("http://hemma.sgsstudentbostader.se");
+  });
+});
 </script>
 
 	<script type="text/javascript" id="clientEventHandlersJS" language="javascript" src="http://tvatta.sgsstudentbostader.se/script/wwwash.js"></script>
@@ -29,7 +34,9 @@ $(document).ready(function(){
 <div id="div1">
 
 </div>
+<div id="div2">
 
+</div>
 
 
 
