hämta både tvätta och hemma

--- a/www/test.html
+++ b/www/test.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 	<title>wwwashcalendar</title>
+<!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 </script>
 <script>
@@ -19,15 +20,10 @@ $(document).ready(function(){
 });
 </script>
 
-	<script type="text/javascript" id="clientEventHandlersJS" language="javascript" src="http://tvatta.sgsstudentbostader.se/script/wwwash.js"></script>
-
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-
-	<link href="css/styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 
-<button value="Hej på dig"></button>
+<button name="Hej på dig" value="Hej på dig" style="color: #000; font-size: 30px;">Magi</button>
 
 
 
