--- a/www/test.html
+++ b/www/test.html
@@ -34,7 +34,10 @@ $(document).ready(function(){
 
 </div>
 
-
+<script type="text/javascript" src="phonegap.js"></script>
+<script type="text/javascript">
+            app.initialize();
+        </script>
 
 </body>
 </html>
