uppdaterat index med ajax

--- a/www/index.html
+++ b/www/index.html
@@ -78,6 +78,10 @@ console.log("Nu kollar readystate om index har laddat");
 <script type="text/javascript" src="js/radera.js"></script>
 <!--<iframe id="hej" height="100px"></iframe>-->
 <!-- Detta är enbart ett test: -->
+
+
+
+<!-- testar om ajax fungerar här nere -->
 <button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>
 <script>
 function loadhemma2(){ 
@@ -106,6 +110,6 @@ function loadhemma2(){
 
 
 </script>
-
+<!-- slut på script -->
     </body>
 </html>
