--- a/www/index.html
+++ b/www/index.html
@@ -88,19 +88,19 @@ function loadhemma2(){
 	$.ajax({
             url: 'http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen',
             success: function(varde) {
-            var slut;
             var heeej1;
             var heeej2;
             				console.log("Visar hela data/varde  " + varde);
-            				slut = $(varde).find("[value]")[0]
+            				var slut = $(varde).find("[value]")[0];
 							console.log("Detta är slut.value  " + slut.value);
+							console.log(slut);
             				$.each(slut, function (heeej1,heeej2)
 							{
 								localStorage[heeej1]=heeej2;
 								//$("#newsfeed").append(newsItem + "=" + news + "<br />");
 								console.log("Detta lagras för tillfället " + localStorage.value);
 			
-								})
+								});
 								
 							//console.log(localStorage.epname);
 							//console.log(varde.getElementsByTagName("doorcontrolcontent"));
