tagit bort knappen

--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@ console.log("Nu kollar readystate om index har laddat");
 
 
 <!-- testar om ajax fungerar här nere -->
-<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>
+<!--<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>-->
 <script>
 function loadhemma2(){ 
 	$.ajax({
