--- a/www/index.html
+++ b/www/index.html
@@ -85,13 +85,14 @@ console.log("Nu kollar readystate om index har laddat");
 <!--<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>-->
 <script>
 function loadhemma2(){ 
+
 	$.ajax({
             url: 'http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen',
             success: function(varde) {
             var heeej1;
             var heeej2;
             				console.log("Visar hela data/varde  " + varde);
-            				var slut = $(varde).find("[value]")[1];
+            				var slut = $(varde).find('[value]')[0]; //ta bort ""
 							console.log("Detta är slut.value  " + slut.value);
 							console.log(slut);
             				$.each(slut, function (heeej1,heeej2)
