--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@ console.log("Nu kollar readystate om index har laddat");
 
 
 <!-- testar om ajax fungerar här nere -->
-<!--<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>-->
+<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>
 <script>
 function loadhemma2(){ 
 
@@ -98,7 +98,6 @@ function loadhemma2(){
             				$.each(slut, function (heeej1,heeej2)
 							{
 								localStorage[heeej1]=heeej2;
-								//$("#newsfeed").append(newsItem + "=" + news + "<br />");
 								console.log("Detta lagras för tillfället " + localStorage.value);
 			
 								});
