--- a/www/index.html
+++ b/www/index.html
@@ -92,7 +92,7 @@ function loadhemma2(){
             var heeej1;
             var heeej2;
             				console.log("Visar hela data/varde  " + varde);
-            				var slut = $(varde).find('[value]')[0]; //ta bort ""
+            				var slut = $(varde).find([value])[0]; //ta bort ""
 							console.log("Detta är slut.value  " + slut.value);
 							console.log(slut);
             				$.each(slut, function (heeej1,heeej2)
