--- a/www/index.html
+++ b/www/index.html
@@ -84,35 +84,31 @@ console.log("Nu kollar readystate om index har laddat");
 <!-- testar om ajax fungerar här nere -->
 <button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>
 <script>
+<script>
 function loadhemma2(){ 
-
+		"use strict";
 	$.ajax({
-            url: 'http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen',
+            url: "http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen",
             success: function(varde) {
-            var heeej1;
-            var heeej2;
-            				console.log("Visar hela data/varde  " + varde);
-            				var slut = $(varde).find([value])[0]; //ta bort ""
-							console.log("Detta är slut.value  " + slut.value);
-							console.log(slut);
-            				$.each(slut, function (heeej1,heeej2)
+            var heeej11;
+            var heeej22;
+            var slut15;
+            				console.log("Här är allt i data/varde med  " + varde);
+            				slut15 = $(varde).find('[value]')[0]
+							console.log("Detta är slut.value  " + slut15.value);
+							console.log(slut15);
+            				$.each(slut15, function (heeej11,heeej22)
 							{
-								localStorage[heeej1]=heeej2;
-								console.log("Detta lagras för tillfället " + localStorage.value);
+								localStorage[heeej11]=heeej22;
+								//$("#newsfeed").append(newsItem + "=" + news + "<br />");
+								console.log("Detta lagras för tillfället i localstorage " + localStorage.value)
 			
-								});
-								
-							//console.log(localStorage.epname);
-							//console.log(varde.getElementsByTagName("doorcontrolcontent"));
-							console.log(slut);
-							//document.write(slut);
-							//console.log(res);                          
+								});                         
 			}
             });
             }
 
 
-</script>
-<!-- slut på script -->
+</script><!-- slut på script -->
     </body>
 </html>
