ikoner + tagit bort lite cosole.log

--- a/www/index.html
+++ b/www/index.html
@@ -135,9 +135,9 @@ function loadtvatta(){
 				antaltider = $(data).find( "#tbl1 tr:contains('-')");
 				lank = $(data).find("#tbl1 [onmousedown]");
 				console.log(tvattaimg[13].parentNode.onmousedown);
-				console.log(tvattaimg);
-				console.log(lank);
-				console.log(nummer);
+				//console.log(tvattaimg);
+				//console.log(lank);
+				//console.log(nummer);
 				console.log("Antal tider/dag  " + antaltider.length);
 				var antal = antaltider.length;
 				console.log(antaltider);
