lagt till InAppBrowser hidden

--- a/www/index.html
+++ b/www/index.html
@@ -160,7 +160,8 @@ function loadtvatta(){
 								
 							//splittar upp och tar ut endast värdet ur funktionen
 							split = String(tvattaimg[smart].parentNode.onmousedown).split("'");
-							cell.innerHTML = tvattaimg[smart].outerHTML + "<a href=http://tvatta.sgsstudentbostader.se/" + split[1] + "> tryck här </a>";
+							cell.innerHTML = tvattaimg[smart].outerHTML + 
+							"<a href=http://tvatta.sgsstudentbostader.se/" + split[1] + "> tryck här </a>";
 							//console.log(res);
 							console.log("Testar att splitta stringen  " + split[1]);
 							}
