Bild är tryckbar

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 </head>
 Version 1.6
 <body>
+<a href="hej"><img src="images/icon_no_not.gif"></a>
 <div class="logo">
 <img class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
