--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,12 @@
 		<meta charset="utf-8" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-		   <script src="jquery-1.4.2.min.js" type="text/javascript"></script>
-		<link rel="stylesheet" type="text/css" href="css/index.css" />
+		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
+		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<title>SGS Studentbostäder - Hemma</title>
 </head>
 Version 1.6
 <body>
-<a href="hej"><img src="images/icon_no_not.gif"></a>
 <div class="logo">
 <img class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
@@ -29,7 +28,7 @@ Version 1.6
 			</ul>	  	
 		</form> <!--<div class="doorControlStatus"></div>-->
 			<p><strong>Öppna entrédörr</strong></p>
-			<p><small>(Open entrance door)</small></p>	   
+			<p><small>(Open entrance door)</small></p>		 
 		</div>
 		</div>
 		
@@ -42,17 +41,7 @@ Version 1.6
 		</div>
 	</div>
 </div>
-<script type="text/javascript">
-function redo(){
-if(document.readyState === "complete"){
-tvattstuga();
-console.log("Nu kollar readystate om index har laddat");
-}	
 
-}
-
-
-</script>
 		<script type="text/javascript" src="js/element.js"></script>
 		<script type="text/javascript" src="phonegap.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
@@ -84,7 +73,6 @@ console.log("Nu kollar readystate om index har laddat");
 
 
 <!-- testar om ajax fungerar här nere -->
-<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadhemma2()">Magi</button>
 <script>
 function loadhemma2(){ 
 		"use strict";
@@ -97,7 +85,7 @@ function loadhemma2(){
 									
 							console.log("Här är allt i data/varde med  " + varde);
 							slut15 = $(varde).find('button').attr('value');
-							console.log("Detta är slut.value  " + slut15);
+							console.log("Detta är slut.value	 " + slut15);
 							console.log(slut15);
 							//$.each(slut15, function (heeej11,heeej22)
 							//{
@@ -105,19 +93,13 @@ function loadhemma2(){
 							//	//$("#newsfeed").append(newsItem + "=" + news + "<br />");
 							//	console.log("Detta lagras för tillfället i localstorage " + localStorage.value)
 			
-							//	});						  
+							//	});							 
 			}
 			});
 			}
 
 
 </script><!-- slut på script -->
-<body>
-<table id="myTable" border="2">
-    <tbody>
-    </tbody>
-</table>
-<button name="Hej på dig" value="Hej på dig" style="color: #fff; font-size: 60px;" onclick="loadtvatta();">ladda tvatta</button>
 
 	</body>
 </html>
