datum och tider är med.

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 Version 1.6
 <body>
 <div class="logo">
-<img class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
+<img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
 <div id="index">
 <div class="container">
