--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 </head>
 Version 1.6
 <body>
+<a onmousedown="loadtvatta(nastavecka[1])"> HEJEEJEJ</a>
 <div class="logo">
 <img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
