--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,15 @@ Version 1.9
 			</ul>	  	
 		</form>
 		</div>
-
+<script type="text/javascript">
+jQuery(document).ready(function() {
+		doorcontrol.activationUrl = "http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock";
+		doorcontrol.unlockText = "L&#229;ser upp...";
+		doorcontrol.errorText = "Ett fel uppstod! D&#246;rr ej uppl&#229;st.";
+		doorcontrol.unlockDurationSeconds = 5;
+		
+});
+</script>
 
 
 
