--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
 </head>
 Version 2.0
 <body>
-<a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
-<a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>
+<!--<a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
+<a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>-->
 <div class="logo">
 <img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
@@ -61,7 +61,7 @@ Version 2.0
 <div id="doorcontrolcontent">
 		<form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" id="formdorren">
 			<ul>
-			<li><button type="submit" name="epName" value="värde" id="hemmadorren">Värde</button>
+			<li><button type="submit" name="epName" value="värde" id="hemmadorren"></button>
 			</li>
 			</ul>	  	
 		</form>
