--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
 </head>
 Version 2.0
 <body>
-<!--<a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
-<a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>-->
+<a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
+<a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>
 <div class="logo">
 <img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
@@ -20,7 +20,7 @@ Version 2.0
 <div class="container">
 	<div class="sixteen columns"></div>
 	
-		<div id="doorcontrolcontent">
+		<div id="doorcontrolcontent2">
 		<div class="eight columns center">
 		<form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" target="hej">
 			<ul>
