--- a/www/index.html
+++ b/www/index.html
@@ -59,12 +59,10 @@ Version 2.0
 
 
 <div id="doorcontrolcontent">
-		<form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" id="formdorren">
-			<ul>
-			<li><button type="submit" name="epName" value="värde" id="hemmadorren"></button>
-			</li>
-			</ul>	  	
-		</form>
+            <form action="/DoorControl/PerformUnlock" method="post"><ul>
+                  <li><button type="submit" name="epName" value="varde"></button></li>
+                  </ul>
+            </form><div class="doorControlStatus"></div>
 </div>
 
 
