--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@ Version 2.0
 		<div class="eight columns center">
 		<form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" target="hej">
 			<ul>
-			<li><button type="submit" name="epName" value="Första Långgatan 12" class="doorbutton">
+			<li><button type="submit" name="epName2" value="Första Långgatan 12" class="doorbutton">
 				<img class="scale-with-grid" src="img/door_button.png" />					
 			</button></li>
 			</ul>	  	
@@ -59,8 +59,8 @@ Version 2.0
 
 
 <div id="doorcontrolcontent">
-            <form action="/DoorControl/PerformUnlock" method="post"><ul>
-                  <li><button type="submit" name="epName" value="varde"></button></li>
+            <form action="/DoorControl/PerformUnlock" method="post" ><ul>
+                  <li><button type="submit" name="epName" value="varde" id="hemmadorren">varde</button></li>
                   </ul>
             </form><div class="doorControlStatus"></div>
 </div>
