--- a/www/hemma/hemma.html
+++ b/www/hemma/hemma.html
@@ -63,7 +63,7 @@ jQuery(function () {
     <div class="titledContentBoxContent">
         <div id="doorcontrolcontent">
             <form action="/DoorControl/PerformUnlock" method="post"><ul>
-                  <li><button type="submit" name="epName" value="F&#246;rsta L&#229;nggatan 12">Lås upp Första Långgatan 12</button></li>
+                  <li><button type="submit" name="epName" value="Första Långgatan 12">Lås upp Första Långgatan 12</button></li>
                   </ul>
             </form><div class="doorControlStatus"></div>
             <div class="doorControlBottom"><a href="/DoorControl/Fullscreen">Direktl&#228;nk</a></div>
