--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,10 @@
 </head>
 Version 2.0
 <body>
+<!--
 <a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
 <a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>
+-->
 <div class="logo">
 <img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
@@ -20,28 +22,30 @@ Version 2.0
 <div class="container">
 	<div class="sixteen columns"></div>
 	
-		<div id="doorcontrolcontent2">
 		<div class="eight columns center">
-		<form action="http://hemma.sgsstudentbostader.se/DoorControl/PerformUnlock" method="post" target="hej">
-			<ul>
-			<li><button type="submit" name="epName2" value="Första Långgatan 12" class="doorbutton">
+			
+			<button onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')" class="doorbutton">
 				<img class="scale-with-grid" src="img/door_button.png" />					
-			</button></li>
-			</ul>	  	
-		</form> <!--<div class="doorControlStatus"></div>-->
+			</button>
+				  	
 			<p><strong>Öppna entrédörr</strong></p>
 			<p><small>(Open entrance door)</small></p>		 
-		</div>
 		</div>
 		
 		<div class="eight columns center">
 			<button onclick="inputfields();">
 			<img class="scale-with-grid" src="img/cal_button.png" />
 			</button>
-			<p><strong>Boka facilitet</strong></p>
-			<p><small>(Book facility)</small></p>
+			<p><strong>Boka</strong></p>
+			<p><small>(Book)</small></p>
 		</div>
 	</div>
+<div id="doorcontrolcontent">
+            <form action="/DoorControl/PerformUnlock" method="post" ><ul>
+                  <li><button type="submit" name="epName" value="varde" id="hemmadorren">varde</button></li>
+                  </ul>
+            </form><div class="doorControlStatus"></div>
+</div>	
 </div>
 
 		<script type="text/javascript" src="js/element.js"></script>
@@ -55,19 +59,6 @@ Version 2.0
 <!-- Här slutar scriptet -->
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/radera.js"></script>
-
-
-
-<div id="doorcontrolcontent">
-            <form action="/DoorControl/PerformUnlock" method="post" ><ul>
-                  <li><button type="submit" name="epName" value="varde" id="hemmadorren">varde</button></li>
-                  </ul>
-            </form><div class="doorControlStatus"></div>
-</div>
-
-
-
-
 
 	</body>
 </html>
