--- a/www/testar/index.html
+++ b/www/testar/index.html
@@ -8,37 +8,13 @@
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<title>SGS Studentbostäder - Hemma</title>
-<script type="text/javascript">
-function onLoad() {
- console.log('Går in i onLoad');
-        document.addEventListener("deviceready", onDeviceReady(), false);
-    }
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-console.log('Går in i DeviceReady');    	
-        // Register the event listener
-        document.addEventListener("backbutton", kommaihag[kommaihag.length -1], false);
-		//var b = String(kommaihag[kommaihag.length -1])
-		//b();
-    }
-    
-//    function onBackKeyDown(){
-//		console.log('Hej');
-//		console.log(kommaihag());
-//    }
-</script>
 </head>
-Version 2.1.2
-<body onload="onLoad()">
-<!--<button id="navigering" onmousedown="bakåt">Gå bakåt i sidorna</button>-->
-<button id="navigering" onmousedown="onDeviceReady()">onDeviceReady</button>
+Version 2.1.1
+<body>
 <!--
 <a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
 <a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>
 -->
-	
 <div class="logo">
 <img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
@@ -64,10 +40,6 @@ Version 2.1.2
 			<p><small>(Book)</small></p>
 		</div>
 	</div>
-
-	
-	
-	
 <div id="doorcontrolcontent">
             <form action="/DoorControl/PerformUnlock" method="post" ><ul>
                   <li><button type="submit" name="epName" value="varde" id="hemmadorren">varde</button></li>
@@ -79,15 +51,11 @@ Version 2.1.2
 		<script type="text/javascript" src="js/element.js"></script>
 		<script type="text/javascript" src="phonegap.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript" src="js/historik.js"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
 		<script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/doorcontrol.js"></script>
-<script type="text/javascript">
 
-historia('startsida()');
-</script>
 <!-- Här slutar scriptet -->
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/radera.js"></script>
