--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 function onLoad() {
  console.log('Går in i onLoad');
-        document.addEventListener("deviceready", onDeviceReady(), false);
+        document.addEventListener("deviceready", onDeviceReady, false);
     }
 
     // device APIs are available
@@ -19,15 +19,16 @@ function onLoad() {
     function onDeviceReady() {
 console.log('Går in i DeviceReady');    	
         // Register the event listener
-        document.addEventListener("backbutton", kommaihag[kommaihag.length -1], false);
+        document.addEventListener("backbutton", onBackKeyDown, false);
 		//var b = String(kommaihag[kommaihag.length -1])
 		//b();
     }
     
-//    function onBackKeyDown(){
-//		console.log('Hej');
-//		console.log(kommaihag());
-//    }
+    function onBackKeyDown(){
+		console.log('Hej');
+		console.log(kommaihag);
+//		kommaihag[kommaihag.length -1]
+    }
 </script>
 </head>
 Version 2.1.3
