--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@ Version 2.1.3
 		<script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/doorcontrol.js"></script>
 <script type="text/javascript">
 
-historia('startsida()');
+historia('startsida');
 </script>
 <!-- Här slutar scriptet -->
 <script type="text/javascript" src="js/script.js"></script>
