--- a/www/index.html
+++ b/www/index.html
@@ -19,14 +19,16 @@ function onLoad() {
     function onDeviceReady() {
 console.log('Går in i DeviceReady');    	
         // Register the event listener
-        document.addEventListener("backbutton", kommaihag[kommaihag.length-1], false);
+        document.addEventListener("backbutton", onBackKeyDown, false);
 		//var b = String(kommaihag[kommaihag.length -1])
 		//b();
     }
     
     function onBackKeyDown(){
 		console.log('Hej');
+		kommaihag[kommaihag.length-1]();
 		console.log(kommaihag);
+		
 //		kommaihag[kommaihag.length -1]
     }
 </script>
