--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@ function onLoad() {
     function onDeviceReady() {
 console.log('Går in i DeviceReady');    	
         // Register the event listener
-        document.addEventListener("backbutton", startsida(), false);
+        document.addEventListener("backbutton", startsida, false);
 		//var b = String(kommaihag[kommaihag.length -1])
 		//b();
     }
