--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@ console.log('Går in i onLoad');
     }
     function onDeviceReady() {
 console.log('Går in i DeviceReady');    	
-        document.addEventListener("backbutton", function() {startsida()}, false);
+        document.addEventListener("backbutton", function() {}, false);
     }
 </script>
 </head>
