--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@ console.log('Går in i DeviceReady');
 
 </head>
 Version 2.1.6
-<body onload="onLoad()">
+<body>
 <button id="navigering" onmousedown="onDeviceReady()">onDeviceReady</button>
 <button onmousedown="onBackKeyDown()">Hej på dig</button>
 <!--
