--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<title>SGS Studentbostäder - Hemma</title>
-
-<script id="backscript" type="text/javascript">
+<span id="backscript">
+<script type="text/javascript">
 //function onLoad() {
 //console.log('Går in i onLoad');
 //        document.addEventListener("deviceready", onDeviceReady, false);
@@ -19,7 +19,7 @@
 //        document.addEventListener("backbutton", function() {}, false);
 //    };
 </script>
-
+<span>
 </head>
 Version 2.1.6
 <body>
