--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
 //        document.addEventListener("backbutton", function() {}, false);
 //    };
 </script>
-<span>
+</span>
 </head>
 Version 2.1.6
 <body>
