--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,14 @@
 		<title>SGS Studentbostäder - Hemma</title>
 <span id="backscript">
 <script type="text/javascript">
-//function onLoad() {
-//console.log('Går in i onLoad');
-//        document.addEventListener("deviceready", onDeviceReady, false);
-//    };
-//    function onDeviceReady() {
-//console.log('Går in i DeviceReady');    	
-//        document.addEventListener("backbutton", function() {}, false);
-//    };
+function onLoad() {
+console.log('Går in i onLoad');
+        document.addEventListener("deviceready", onDeviceReady, false);
+    };
+    function onDeviceReady() {
+console.log('Går in i DeviceReady');    	
+        document.addEventListener("backbutton", function() {}, false);
+    };
 </script>
 </span>
 </head>
