--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
+		<link rel="stylesheet" type="text/css" href="css/animationer.css" />
 		<title>SGS Studentbostäder - Hemma</title>
 <script type="text/javascript">
 function onLoad() {
@@ -19,19 +20,27 @@ console.log('Går in i DeviceReady');
     };
 </script>
 </head>
-Version 2.1.6
+
 <body onload="onLoad()">
-<button id="navigering" onmousedown="onDeviceReady()">onDeviceReady</button>
-<button onmousedown="onBackKeyDown()">Hej på dig</button>
-<!--
-<a onmousedown="hamtahemma('hemma/hemma.html')"> Chrome-knapp </a>
-<a onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')"> App-knapp </a>
--->
+<span id="bakgrundinformation" class="bakgrundinformation_hide">
+</span>
+<table id="uppernav">
+<tr>
+<td id="navigering" onmousedown="varde">Bakåt</td>
+<td>
+<img id="topplogga" class="scale-with-grid-logo-small" src="img/sgs_logo_width_512.png">
+</td>
+<td id="infoclick" onclick="info_animation()">Info</td>
+</tr>
+</table>
+
 	
+
+<div id="index">
+
 <div class="logo">
 <img id="topploga" class="scale-with-grid-logo" src="img/sgs_logo_width_512.png">
 </div>
-<div id="index">
 <div class="container">
 	<div class="sixteen columns"></div>
 	
@@ -69,6 +78,7 @@ Version 2.1.6
 		<script type="text/javascript" src="phonegap.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/historik.js"></script>
+		<script type="text/javascript" src="js/animation.js"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
@@ -81,6 +91,6 @@ historia('startsida()');
 <!-- Här slutar scriptet -->
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/radera.js"></script>
-
+Version 2.1.6
 	</body>
 </html>
