--- a/www/tvatta/byggnad.html
+++ b/www/tvatta/byggnad.html
@@ -34,7 +34,7 @@
 									<td id="tdShowFirst" class="headerColor" style="padding-bottom: 10px; cursor: pointer; cursor: hand; padding-top: 10px" onmousedown="javascript:location.href='wwwashwait2.aspx?MaxTimes=5'">
 										<span style="padding-left: 10px">
 											<img src="Images/icon_plus_small.gif" align="top" alt="" />
-											&nbsp;<span id="lblShowFirstAvailable">Visa första lediga tid</span></span>
+											&nbsp;<span id="lblShowFirstAvailable">Visa första lediga tidhejeh</span></span>
 									</td>
 
 								</tr>
