--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/animationer.css" />
+		<script type="text/javascript" src="js/lankar.js"></script>
 		<title>SGS Studentbostäder - Hemma</title>
 <script type="text/javascript">
 function onLoad() {
@@ -24,13 +25,13 @@ console.log('Går in i DeviceReady');
 <body onload="onLoad()">
 <span id="bakgrundinformation" class="bakgrundinformation_hide">
 </span>
-<table id="uppernav">
+<table id="uppernav" class="uppernavclass">
 <tr>
-<td id="navigering" onmousedown="varde">Bakåt</td>
+<td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
 <td>
 <img id="topplogga" class="scale-with-grid-logo-small" src="img/sgs_logo_width_512.png">
 </td>
-<td id="infoclick" onclick="info_animation()">Info</td>
+<td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
 
@@ -79,6 +80,7 @@ console.log('Går in i DeviceReady');
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/historik.js"></script>
 		<script type="text/javascript" src="js/animation.js"></script>
+		
 		<script type="text/javascript">
 			app.initialize();
 		</script>
