--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-
+<button onmousedown="loggaut()"><a>Det är dags att logga ut</a></button>
 	
 
 <div id="index">
@@ -56,7 +56,7 @@ console.log('Går in i DeviceReady');
 		</div>
 		
 		<div class="eight columns center">
-			<button onclick="inputfields();">
+			<button onclick="kollainlogg();">
 			<img class="scale-with-grid" src="img/cal_button.png" />
 			</button>
 			<p><strong>Boka</strong></p>
@@ -80,6 +80,7 @@ console.log('Går in i DeviceReady');
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/historik.js"></script>
 		<script type="text/javascript" src="js/animation.js"></script>
+		<script type="text/javascript" src="js/inloggning.js"></script>
 		
 		<script type="text/javascript">
 			app.initialize();
