Nu kollar den korrekt.

--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@ console.log('Går in i DeviceReady');
 		</div>
 		
 		<div class="eight columns center">
-			<button onclick="kollainlogg();">
+			<button onclick="kollainlogg()">
 			<img class="scale-with-grid" src="img/cal_button.png" />
 			</button>
 			<p><strong>Boka</strong></p>
