--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@ console.log('Går in i DeviceReady');
 <body onload="onLoad()">
 <span id="bakgrundinformation" class="bakgrundinformation_hide">
 </span>
+<br><br><br>
+<button onmousedown="show()"> VISA MIG LOADING </button>
 
 <button onmousedown="loggaut()">Logga ut</button>
 <table id="uppernav" class="uppernavclass">
@@ -38,7 +40,7 @@ console.log('Går in i DeviceReady');
 </tr>
 </table>
 
-<span id="loading" style='display:none;'>
+<span id="loading" style='display:none'>
 <div id="ballsWaveG">
 <div id="ballsWaveG_1" class="ballsWaveG">
 </div>
