--- a/www/index.html
+++ b/www/index.html
@@ -40,26 +40,9 @@ console.log('Går in i DeviceReady');
 </tr>
 </table>
 
-<span id="loading" style='display:none'>
-<div id="ballsWaveG">
-<div id="ballsWaveG_1" class="ballsWaveG">
+<div id="loading">
+
 </div>
-<div id="ballsWaveG_2" class="ballsWaveG">
-</div>
-<div id="ballsWaveG_3" class="ballsWaveG">
-</div>
-<div id="ballsWaveG_4" class="ballsWaveG">
-</div>
-<div id="ballsWaveG_5" class="ballsWaveG">
-</div>
-<div id="ballsWaveG_6" class="ballsWaveG">
-</div>
-<div id="ballsWaveG_7" class="ballsWaveG">
-</div>
-<div id="ballsWaveG_8" class="ballsWaveG">
-</div>
-</div>
-</span>	
 
 
 
