--- a/www/index.html
+++ b/www/index.html
@@ -40,8 +40,8 @@ console.log('Går in i DeviceReady');
 </tr>
 </table>
 
-<div id="loading">
-
+<div id="loading" style="display:none">
+<div id="loaderImage"></div>
 </div>
 
 
