--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,15 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-
+<table id="underuppernav" class="uppernavclass">
+<tr>
+<td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
+<td>
+<img id="topplogga" class="scale-with-grid-logo-small" src="img/sgs_logo_width_512.png">
+</td>
+<td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
+</tr>
+</table>
 <div id="loading" style="display:none">
 <div id="loaderImage"></div>
 </div>
