--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-<div id="loading" style="display:none">
+<div id="loading" style="display:block">
 <div id="loaderImage"></div>
 </div>
 
@@ -125,13 +125,14 @@ Version 2.1.7
 
 
 
+
 <script type="text/javascript">
 	var cSpeed=9;
-	var cWidth=128;
-	var cHeight=128;
-	var cTotalFrames=12;
-	var cFrameWidth=128;
-	var cImageSrc='images/sprites.gif';
+	var cWidth=220;
+	var cHeight=20;
+	var cTotalFrames=37;
+	var cFrameWidth=220;
+	var cImageSrc='images/sprites.png';
 	
 	var cImageTimeout=false;
 	var cIndex=0;
