--- a/www/index.html
+++ b/www/index.html
@@ -128,11 +128,11 @@ Version 2.1.7
 
 <script type="text/javascript">
 	var cSpeed=5;
-	var cWidth=440;
-	var cHeight=40;
-	var cTotalFrames=74;
-	var cFrameWidth=440;
-	var cImageSrc='images/sprites2.png';
+	var cWidth=220;
+	var cHeight=20;
+	var cTotalFrames=37;
+	var cFrameWidth=220;
+	var cImageSrc='images/sprites.png';
 	
 	var cImageTimeout=false;
 	var cIndex=0;
