--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-<div id="loading" style="display:block">
+<div id="loading" style="visibility: hidden">
 <div id="loaderImage"></div>
 </div>
 
