--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@ console.log('Går in i DeviceReady');
 
 <span id="bakgrundinformation" class="bakgrundinformation_hide">
 </span>
-
+<span id="helamenyn">
 <table id="uppernav" class="uppernavclass">
 <tr>
 <td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
@@ -41,6 +41,10 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
+<div id="loading" style="visibility:visible">
+<div id="loaderImage"></div>
+</div>
+</span>
 <table id="underuppernav" class="uppernavclass">
 <tr>
 <td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
@@ -50,9 +54,6 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-<div id="loading" style="visibility:hidden">
-<div id="loaderImage"></div>
-</div>
 
 
 
