--- a/www/index.html
+++ b/www/index.html
@@ -103,24 +103,23 @@ console.log('Går in i DeviceReady');
 
 		<script type="text/javascript" src="js/element.js"></script>
 		<script type="text/javascript" src="phonegap.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
+		<!--<script type="text/javascript" src="js/index.js"></script>-->
 		<script type="text/javascript" src="js/historik.js"></script>
 		<script type="text/javascript" src="js/animation.js"></script>
 		<script type="text/javascript" src="js/inloggning.js"></script>
 		<script type="text/javascript" src="js/felmeddelande.js"></script>
-		
+		<script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
-		<script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/doorcontrol.js"></script>
+		<!--<script type="text/javascript" src="http://hemma.sgsstudentbostader.se/Scripts/doorcontrol.js"></script>-->
 
 
 <script type="text/javascript">
 historia('startsida()');
 </script>
 <!-- Här slutar scriptet -->
-<script type="text/javascript" src="js/script.js"></script>
-<script type="text/javascript" src="js/radera.js"></script>
+
 Version 2.1.8
 
 
