--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@ console.log('Går in i DeviceReady');
 <span id="helamenyn">
 <table id="uppernav" class="uppernavclass">
 <tr>
-<td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
+<td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small" id="back"></img></td>
 <td>
 <img id="topplogga" class="scale-with-grid-logo-small" src="img/sgs_logo_width_512.png">
 </td>
