--- a/www/index.html
+++ b/www/index.html
@@ -126,6 +126,7 @@ Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskap
 		<script type="text/javascript" src="js/inloggning.js"></script>
 		<script type="text/javascript" src="js/felmeddelande.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/error.js"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
